[Heart] Change mechanism

--- a/heart.html
+++ b/heart.html
@@ -160,39 +160,69 @@
     const pow = (num,pow) => Math.sign(num) * Math.pow(Math.abs(num), pow)
     let hearts = []
     const accel = -1
-    const drag = 0.98
+    const drag = 0.97
     let size = 1
+    const inHeart = pos => {
+      const point = svg.createSVGPoint()
+      point.x = pos.x/size*1.7
+      point.y = pos.y/size*1.7
+      return heart.isPointInFill(point)
+    }
     function changeScene() {
       yesBtn.style.display = 'none'
       noBtn.style.display = 'none'
       heart.style.display = 'unset'
       setInterval(() => {
         for (const path of hearts) {
-          if (path.sleep)
-            continue
-          path.anim.setAttribute('from', path.pos)
-          path.pos = path.pos.sub(path.vel)
-          const clamp = num => {
-            num = Math.round(num)
-            if (num < 0)
-              num = 0
-            else if (num > 31)
-              num = 31
-            else return num
+          const inside = inHeart(path.pos)
+          path.accel = path.pos.sub(path.attraction).mul(0.01)
+          if (!inside && !path.top) {
+            path.top = true
             svg.removeChild(path)
             svg.appendChild(path)
-            return num
           }
-          const index = clamp(path.pos.x/size+15.6) + clamp(path.pos.y/size+14)*32
-          const accelx = mapX[index], accely = mapY[index]
-          path.accel = V(accelx*accel, accely*accel)
+          path.anim.setAttribute('from', path.pos)
+          path.pos = path.pos.sub(path.vel)
+          //const clamp = num => {
+          //  num = Math.round(num)
+          //  if (num < 0)
+          //    num = 0
+          //  else if (num > 31)
+          //    num = 31
+          //  else return num
+          //  svg.removeChild(path)
+          //  svg.appendChild(path)
+          //  return num
+          //}
+          //const index = clamp(path.pos.x/size+15.6) + clamp(path.pos.y/size+14)*32
+          //const accelx = mapX[index], accely = mapY[index]
           path.vel = path.vel.mad(drag, path.accel)
-          if (path.vel.dot(path.vel) < 1 && path.accel.dot(path.accel) < 0.01)
-            path.sleep = true
           path.anim.setAttribute('to', path.pos)
           path.anim.beginElement()
         }
       }, 100)
+    }
+    const randDonut = () => {
+      const angle = Math.random()*Math.PI*2
+      const radius = Math.random()*2 + 1
+      return V(Math.sin(angle)*radius, Math.cos(angle)*radius)
+    }
+    const randHeart = () => {
+      const inHeart = pos => {
+        const point = svg.createSVGPoint()
+        point.x = pos.x/size*2
+        point.y = pos.y/size*2
+        return heart.isPointInFill(point)
+      }
+      while(true) {
+        const point = V((Math.random()-0.5)*50*size, (Math.random()-0.5)*50*size)
+        if (inHeart(point))
+          return point
+      }
+    }
+    const randHeartStroke = () => {
+      const point = heart.getPointAtLength(heart.getTotalLength()*Math.random())
+      return V(point.x*size/1.7, point.y*size/1.7)
     }
     var heartDone = true
     var roundHeart = false
@@ -209,42 +239,43 @@
           heart.parentNode.children[1].setAttribute('to', size += 0.2)
           heart.parentNode.children[1].beginElement()
           heart.children[0].beginElement()
+          const pos = Math.min((size-1)/2, 1)
+          heart.style.fill = 'rgb(0,0,0,' + (1-pos*pos*pos) + ')'
+          questionTxt.style.fill = 'rgb(' + 255 + ',' + (255-90*pos) + ',' + (255-70*pos) + ')'
+          heart.style.stroke = 'rgb(' + 255 + ',' + (255-190*pos) + ',' + (255-150*pos) + ','+(1-pos*pos*0.7)+ ')'
         } else if (!roundHeart) {
-          heart.children[0].setAttribute('values', 'M 26,-6 C 26,10 0,18 0,32 0,18 -26,10 -26,-6 -26,-26 0,-26 0,-6 0,-26 26,-26 26,-6;M 32.5,-8.38 C 32.5,16.6 0,34.1 0,34.1 0,34.1 -32.5,16.6 -32.5,-8.38 -32.5,-33.4 0,-33.4 0,-8.38 0,-33.4 32.5,-33.4 32.5,-8.38')
+          heart.setAttribute('d', 'M 32.5,-8.38 C 32.5,16.6 0,34.1 0,34.1 0,34.1 -32.5,16.6 -32.5,-8.38 -32.5,-33.4 0,-33.4 0,-8.38 0,-33.4 32.5,-33.4 32.5,-8.38')
+          setTimeout(() => {
+            for (const path of hearts) {
+              path.attraction = randHeartStroke()
+              path.border = true
+            }
+          }, 10)
           heart.children[0].setAttribute('keyTimes', '0;1')
           heart.children[0].setAttribute('dur', '0.3s')
           heart.parentNode.children[1].setAttribute('values', size+';'+(size+0.3)+';'+size)
           heart.parentNode.children[1].setAttribute('keyTimes', '0;0.3;1')
           roundHeart = true
-          size += 1.35
           heart.children[0].beginElement()
+          heart.style.stroke = 'rgb(0,0,0,0)'
+          heart.style.fill = 'rgb(0,0,0,0)'
         }
         heart.parentNode.children[1].beginElement()
         heart.parentNode.children[1].onend = ()=>heartDone = true
-        const pos = Math.min((size-1)/2, 1)
-        heart.style.fill = 'rgb(0,0,0,' + (1-pos*pos*pos) + ')'
-        heart.style.strokeWidth = 1-pos*0.3
-        heart.style.stroke = 'rgb(' + 255 + ',' + (255-190*pos) + ',' + (255-150*pos) + ','+(1-pos*pos*pos*0.8)+ ')'
-        questionTxt.style.fill = 'rgb(' + 255 + ',' + (255-90*pos) + ',' + (255-70*pos) + ')'
         heartDone = false
         for (const path of hearts) {
-          if (Math.random() < 0.7) continue
-          const rand = roundHeart ? Math.random()*1.2 + 0.3 : Math.random()*0.8+0.6
-          if (rand < 1)
-            path.sleep = false
-          const len = Math.sqrt(path.vel.dot(path.vel))
-          const mul = Math.pow(len/20, rand)*20 / len
-          path.vel = V(path.vel.x *mul, path.vel.y *mul)
+          path.vel = path.vel.sub(randDonut())
         }
         if (!roundHeart) {
-          for (let i = 0; i < 64; i++) {
+          for (let i = 0; i < 32; i++) {
             const path = document.createElementNS(svgUrl, 'path')
             const animate = document.createElementNS(svgUrl, 'animateTransform')
-            const scale = (Math.pow(Math.random(),4)*0.04+0.04)*Math.sqrt(size)
+            const scale = (Math.pow(Math.random(),4)*0.05+0.05)*Math.sqrt(size)
             path.setAttribute('d', heartPath.map(item => typeof item == 'string' ? item : item*scale).join(' '))
             path.style.stroke = 'none'
-            path.pos = V((Math.random()-0.5)*10*size, (Math.random()-0.3)*10*size)
-            path.vel = V((Math.random()-0.5)*8*Math.sqrt(size), (Math.random()-0.5)*8*Math.sqrt(size))
+            path.pos = randHeart()
+            path.attraction = path.pos
+            path.vel = randDonut().mul(2*Math.sqrt(size))
             path.style.fill = 'rgb('+colors[0].map((c,i) => c+Math.random()*(colors[1][i]-c)).join(',')+')'
             path.style.opacity = 0
             path.style.pointerEvents='none'
@@ -264,22 +295,6 @@
         }
       }
     }
-    let mapX = "\xff\xff\xff\xff\xff\xff\xff\xff\xffL\x00\x00\x00\x00\x00\x18\xff\xff\xff\xff\xff\xff\x9a\x00\x00\x00\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xff\xff\xffL\x00\x00\x00\x00\x00\x18\xff\xff\xff\xff\xff\xff\x9a\x00\x00\x00\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xff\xff\xffL\x00\x00\x00\x00\x00\x18\xff\xff\xff\xff\xff\xff\x9a\x00\x00\x00\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xff\xff\xffL\x00\x00\x00\x00\x00\x18\xff\xff\xff\xff\xff\xff\x9a\x00\x00\x00\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xf5\xbe\x9ayfD\x0e\x00\x00\x18\xff\xff\xff\xf2\xbb\x9a\x84fD\x0e\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xe0\x89\x80\x80\x80\x80\x80\x80'\x00\x18\xff\xff\xd8\x80\x80\x80\x80\x80\x80z'\x00\x00\x00\x00\x00\xff\xff\xff\xff\xed\x87\x80\x80\x80\x80\x80\x80\x80\x80\x1a\x18\xff\xe5\x80\x80\x80\x80\x80\x80\x80\x80|\x1a\x00\x00\x00\x00\xff\xff\xff\xff\xac\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x18\xff\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80`\x00\x00\x00\x00\xff\xff\xff\xfa\x83\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80%\xf0\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x10\x00\x00\x00\xff\xff\xff\xdf\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80-\x00\x00\x00\xff\xff\xff\xd2\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80:\x00\x00\x00\xff\xff\xff\xd0\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x3c\x00\x00\x00\xff\xff\xff\xdb\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x801\x00\x00\x00\xff\xff\xff\xf2\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x19\x00\x00\x00\xff\xff\xff\xff\x92\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80w\x02\x00\x00\x00\xff\xff\xff\xff\xc0\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80J\x00\x00\x00\x00\xff\xff\xff\xff\xf3\x85\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80~\x15\x00\x00\x00\x00\xff\xff\xff\xff\xff\xbb\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80P\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xfa\x91\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80v\x0b\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xe1\x82\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x7f'\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xff\xcb\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80?\x00\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xff\xff\xc7\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80H\x00\x00\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xff\xff\xff\xc1\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80J\x00\x00\x00\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xcd\x82\x80\x80\x80\x80\x80\x80\x80\x80\x7f@\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xdc\x88\x80\x80\x80\x80\x80\x80z+\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xf0\x9e\x80\x80\x80\x80f\x14\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xfd\xc5\x85\x7b=\x03\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xef\x11\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00"
-
-    let mapY = "\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xf9\xda\xce\xda\xf8\xff\xff\xff\xff\xff\xff\xff\xff\xf8\xda\xce\xda\xf9\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xc6\x86\x80\x80\x80\x85\xc0\xfe\xff\xff\xff\xff\xfe\xc2\x86\x80\x80\x80\x86\xc4\xfe\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xbf\x80\x80\x80\x80\x80\x80\x80\xb4\xff\xff\xff\xff\xb8\x80\x80\x80\x80\x80\x80\x80\xb9\xff\xff\xff\xff\xff\xff\xff\xff\xff\xee\x81\x80\x80\x80\x80\x80\x80\x80\x80\xe2\xff\xff\xe4\x80\x80\x80\x80\x80\x80\x80\x80\x80\xe5\xff\xff\xff\xff\xff\xff\xff\xff\xbc\x80\x80\x80\x80\x80\x80\x80\x80\x80\xb0\xff\xff\xb1\x80\x80\x80\x80\x80\x80\x80\x80\x80\xb2\xff\xff\xff\xff\xff\xff\xff\xff\x9e\x80\x80\x80\x80\x80\x80\x80\x80\x80\x92\xff\xff\x92\x80\x80\x80\x80\x80\x80\x80\x80\x80\x93\xff\xff\xff\xff\xff\xff\xff\xff\x92\x80\x80\x80\x80\x80\x80\x80\x80\x80\x86\xff\xff\x85\x80\x80\x80\x80\x80\x80\x80\x80\x80\x86\xff\xff\xff\xff\xff\xff\xff\xff\x91\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\xe9\xe9\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x84\xff\xff\xff\xff\xff\xff\xff\xff\x9b\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x81\x81\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x8f\xff\xff\xff\xff\xab\xab\xab\xab\x8f\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x8b\xab\xab\xab\xab\x00\x00\x00\x00)\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x806\x00\x00\x00\x00\x00\x00\x00\x00\x04v\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80|\x09\x00\x00\x00\x00\x00\x00\x00\x00\x00\x3e\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80H\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x06p\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80w\x0b\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x1f~\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80.\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00B\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80Q\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x02X\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x5c\x04\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x03\x5b\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80a\x06\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x05^\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80^\x06\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x02L\x80\x80\x80\x80\x80\x80\x80\x80U\x04\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x009\x7d\x80\x80\x80\x80~\x3c\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x1cl\x80\x80m\x1e\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x04??\x04\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00"
-
-    //const safeChar = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789'i~`!@#$%^&*()_+-=|\;:?,./"
-    //let newMapX = '"'
-    //for (let i=0; i < mapX.length; i+=4)
-    //  newMapX += safeChar.includes(mapX.charAt(i)) ? mapX.charAt(i) : '\\x'+mapX.charCodeAt(i).toString(16).padStart(2,'0')
-    //let newMapY = '"'
-    //for (let i=0; i < mapY.length; i+=4)
-    //  newMapY += safeChar.includes(mapY.charAt(i)) ? mapY.charAt(i) : '\\x'+mapY.charCodeAt(i).toString(16).padStart(2,'0')
-    //console.log(newMapX + '"')
-    //console.log(newMapY + '"')
-
-    mapX = Object.keys(mapX).map(i => mapX.charCodeAt(i)/255-0.5)
-    mapY = Object.keys(mapY).map(i => mapY.charCodeAt(i)/255-0.5)
   </script>
 </svg>
 </body>
