--- a/heart.html
+++ b/heart.html
@@ -52,8 +52,8 @@
 </head>
 <body>
 <svg xmlns="http://www.w3.org/2000/svg" viewBox='-96 -80 192 160'>
-  <text x=-27 y=-80 id='greeting'>Hé lô người đẹp!</text>
-  <text x=-40 y=-70 id='question'>Bé có người yêu chưa?<animate attributeName='x' to='-51' dur='1.3s' fill='freeze' begin='indefinite'/></text>
+  <text x=-27 y=-80 id='greeting'>Hé lô người đẹp!<animate attributeName='x' to='-51' dur='1.3s' fill='freeze' begin='indefinite'/></text>
+  <text x=-40 y=-70 id='question'>Bé có người yêu chưa?</text>
   <path id='yes' class='btn' transform='translate(-32 -8) scale(0.5 0.5)' onclick='accept()' d='M 17,17 C 12.3,21.7 6.1,24 0,24 -6.1,24 -12.3,21.7 -17,17 M-17,17C-32,1.9 -21.4,-23.9 0,-23.9 21.4,-23.9 32,1.9 17,17'>
     <animate attributeName='d'dur='1s' fill='freeze' begin='indefinite' onend='changeScene()' to='M 64,48 C 64,48 64,48 64,48 64,34 38,26 38,10 M 38,10 C 38,0 44.5,-5 51,-5 57.5,-5 64,0 64,10'/>
   </path>
@@ -141,12 +141,12 @@
       svg.style.opacity = 0
     }
     function accept() {
-      questionTxt.children[0].setAttribute('to', -39)
-      animateText(questionTxt, 'Bé có yêu anh hong?')
+      greetingTxt.children[0].setAttribute('to', -39)
       animateText(choices[0], 'Có')
       animateText(choices[1], 'Không')
-      animateText(greetingTxt, '')
-      questionTxt.children[0].beginElement()
+      animateText(greetingTxt, 'Bé có yêu anh hong?')
+      animateText(questionTxt, '')
+      greetingTxt.children[0].beginElement()
       function showHidden(value) {
         hiddenTxt.style.opacity = value
       }
@@ -165,9 +165,10 @@
         noBtn.children[0].beginElement()
         yesBtn.children[0].beginElement()
         choices[1].style.opacity = 0
-        questionTxt.children[0].setAttribute('to', -50)
-        animateText(questionTxt, 'Anh cũng yêu bé rất nhiều!')
-        questionTxt.children[0].beginElement()
+        greetingTxt.children[0].setAttribute('from', -39)
+        greetingTxt.children[0].setAttribute('to', -50)
+        animateText(greetingTxt, 'Anh cũng yêu bé rất nhiều!')
+        greetingTxt.children[0].beginElement()
         setTimeout(() => {
           choices[0].style.opacity = 0
           hiddenTxt.style.opacity = 0
@@ -226,6 +227,13 @@
       const point = heart.getPointAtLength(heart.getTotalLength()*Math.random())
       return V(point.x*size/1.7, point.y*size/1.7)
     }
+    // Convert device shake on mobile to miniheart motion
+    window.addEventListener('devicemotion', event => {
+      const a = event.acceleration
+      const pow = Math.sqrt(a.x*a.x+a.y*a.y+a.z*a.z)
+      for (const path of minihearts)
+        path.vel = path.vel.mad(Math.exp(pow*0.004), randDonut().mul(pow*0.01))
+    })
     var heartBeatDone = true
     var heartGone = false
     const svgUrl = 'http://www.w3.org/2000/svg'
@@ -238,10 +246,10 @@
       } else {
         for (const path of minihearts)
           path.vel = path.vel.mad(1.4, randDonut())
-        if (size < 3) {
+        if (size < 3.5) {
           // Start animation
           heart.parentNode.children[1].setAttribute('from', size)
-          heart.parentNode.children[1].setAttribute('to', size += 0.2)
+          heart.parentNode.children[1].setAttribute('to', size += 0.25)
           heart.parentNode.children[1].onend = ()=>heartBeatDone = true
           heart.parentNode.children[1].beginElement()
           heart.children[0].beginElement()
@@ -277,20 +285,14 @@
           }, 1)
         } else if (!heartGone) {
           // Put heart to final state
-          heart.setAttribute('d', 'M 32.5,-8.38 C 32.5,16.6 0,34.1 0,34.1 0,34.1 -32.5,16.6 -32.5,-8.38 -32.5,-33.4 0,-33.4 0,-8.38 0,-33.4 32.5,-33.4 32.5,-8.38')
+          heart.setAttribute('d', heartPath.join(' '))
           heart.style.stroke = 'rgb(0,0,0,0)'
           heart.style.fill = 'rgb(0,0,0,0.1)'
+          heart.children[0].remove()
           heartGone = true
           // Reposition minihearts to heart stroke
           for (const path of minihearts)
             path.attraction = randHeartStroke()
-          // Convert device shake on mobile to miniheart motion
-          window.addEventListener('devicemotion', event => {
-            const a = event.acceleration
-            const pow = Math.sqrt(a.x*a.x+a.y*a.y+a.z*a.z)
-            for (const path of minihearts)
-              path.vel = path.vel.mad(Math.exp(pow*0.004), randDonut().mul(pow*0.01))
-          })
         }
       }
     }
